# PyPitch

./: .env.example  .gitignore  .pre-commit-config.yaml  Agents.md  Dockerfile  README.md  __init__.py  demo.ipynb  docker-compose.yml  pyproject.toml  pytest.ini  reproduce_issue.py  requirements.in  requirements.txt  test_all_imports.py  test_core_functionality.py  test_metrics.py  test_query_types.py  test_v1_features.ipynb  v1.txt  validate_production.py
.github/workflows/: ci.yml
examples/: 01_setup_data.py  02_basic_session.py  03_ingest_world.py  03_player_lookup.py  04_venue_lookup.py  05_batter_vs_bowler.py  06_venue_stats.py  07_win_prediction.py  08_custom_matchup.py  09_fantasy_points.py  10_raw_sql.py  11_filter_season.py  12_filter_phase.py  13_top_run_scorers.py  14_top_wicket_takers.py  15_economy_rates.py  16_boundary_percentage.py  17_dot_ball_percentage.py  18_batting_average.py  19_bowling_average.py  20_team_stats.py  21_innings_comparison.py  22_partnership_stats.py  23_player_consistency.py  24_match_result.py  25_full_analysis.py  26_report_plugin_demo.py  27_full_pipeline_demo.ipynb  27_full_pipeline_demo.py  README.md  demo.ipynb  demo.py  test_winprob.py
pypitch/: __init__.py  client.py  config.py  exceptions.py  express.py  features.py  logging_config.py
pypitch/api/: __init__.py  fantasy.py  models.py  plugins.py  session.py  sim.py  stats.py  validation.py
pypitch/compute/: decorators.py  protocols.py  winprob.py
pypitch/core/: attribution.py  canonicalize.py  match_config.py  migration.py  video_sync.py
pypitch/data/: loader.py  pipeline.py
pypitch/docs/: adapters.md  api.md  debug_mode.md  impact_player.md  winprob_model.md
pypitch/live/: __init__.py  ingestor.py  overlay.py
pypitch/models/: registry.py  train.py  win_predictor.py
pypitch/query/: base.py  defs.py  matchups.py
pypitch/report/: __init__.py  pdf.py
pypitch/runtime/: cache.py  cache_duckdb.py  executor.py  modes.py  planner.py
pypitch/schema/: evolution.py  v1.py
pypitch/serve/: __init__.py  api.py  auth.py  monitoring.py  (+1 more)
scripts/: healthcheck.py
tests/: __init__.py  conftest.py  inspect_registry.py  test_composite_metrics.py  test_cricsheet_loader.py  test_debug_mode.py  test_end_to_end.py  test_hashing.py  test_invariants.py  test_live.py  test_plugins_validation.py  test_registry.py  test_report_plugin.py  test_reproduce_issue.py  test_robustness.py  test_schema.py  test_serve.py  test_win_probability.py
(+34 files in other folders)
