[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypitch"
version = "0.1.0"
authors = [
  { name="PyPitch Team", email="dev@pypitch.org" },
]
description = "The Open Source Cricket Intelligence SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.0.0",
    "requests>=2.0.0",
    "numpy>=1.20.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pypitch"