[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypitch"
version = "0.1.0"
authors = [
  { name="PyPitch Team", email="dev@pypitch.org" },
]
description = "The Open Source Cricket Intelligence SDK"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyarrow>=14.0.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.0.0",
    "requests>=2.0.0",
    "numpy>=1.20.0",
    "pytest-benchmark>=4.0.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/pypitch"
[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false

[[tool.mypy.overrides]]
module = ["pyarrow.*", "duckdb.*", "pandas.*", "tqdm.*", "numpy.*"]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["pypitch*"]
exclude = ["data*", "examples*", "tests*"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
python_paths = ["."]
norecursedirs = ["examples", "docs", "scripts", "__pycache__"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance tests"
]
